# rendering

./: .clangd  CMakeLists.txt
.github/workflows/: ci_tests.yml
cookiecutter/: cookiecutter.json
examples/: CMakeLists.txt  random_noise.cpp
include/sac/rendering/: image.hpp
src/sac/rendering/: CMakeLists.txt  image.cpp  sac.rendering-config.cmake.in
tests/sac/rendering/: CMakeLists.txt  image.test.cpp
